@@ -12,7 +12,7 @@ Vcs-Git: https://github.com/zentyal/zentyal.git
 Package: zentyal-webserver
 Architecture: all
 Depends: zentyal-core (>= 8.0.0), zentyal-core (<< 8.1.0),
-         zentyal-firewall, zentyal-ca, certbot, libnet-domain-tld-perl,
+         zentyal-firewall, zentyal-ca, libnet-domain-tld-perl,
          apache2, ${misc:Depends}
 Description: Zentyal - Web Server
  Zentyal is a Linux small business server that can act as
